# ai-news-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: daily-digest.yml
config/: sources.yaml
docs/: github-actions-setup.md
docs/superpowers/plans/: 2026-05-13-ai-news-aggregator-bot-plan.revised.md  2026-05-14-hero-media-plan.md
docs/superpowers/specs/: 2026-05-13-ai-news-aggregator-bot-design.revised.md
src/: config.py  main.py  pipeline.py  scheduler.py
src/ai/: client.py  ranker.py  summarizer.py  translator.py
src/ai/prompts/: ranker_system.txt  summarizer_ru_system.txt  summarizer_system.txt  translator_system.txt
src/collectors/: base.py  rss.py  telegram.py
src/database/: client.py  models.py  repository.py
src/publisher/: formatter.py  telegram_bot.py
src/scripts/: generate_default_hero.py  telethon_login.py  test_publish.py
tests/: test_ai.py  test_collectors.py  test_config.py  test_dedupe_logic.py  test_formatter.py  test_main.py  test_media_extraction.py  test_pipeline.py  test_repository.py  test_rss_collector.py  test_telegram_bot.py
